client/src/App.css
body * {
  /* outline: 1px solid red; */
}
body {
  padding: 0;
  margin: 0;
  box-sizing: border-box;

  background-color: #dfc94f;
  /* background-image: url(//ajwebcdn1.akamaized.net/assets/2.0/site/overflow_pattern_tile-22395bd….svg); */
  background-image: url("../src/static/bg.svg");
  background-repeat: repeat;
  background-size: 600px;
  padding: 0 50px;
}

.App {
  display: grid;
  place-items: center;
  height: 70vh;
  /* background-color: rgb(194, 236, 236); */
}

.logIn {
  width: 600px;
  height: 350px;
  border: 10px solid rgb(119, 71, 24);
  border-radius: 10px;
  background-color: rgb(255, 95, 51);
  background-image: url("./static/red_bg.svg");
  /* style the container */
  display: flex;
  align-items: center;
  justify-content: center;
  /* stack on top of eachother */
  flex-direction: column;
  /* display: grid;
  place-items: center; */
}
.logIn .username {
  margin: 10px;
  width: 200px;
  height: 40px;
  border: 2px solid rgb(236, 179, 68);
  border-radius: 7px;
  background-color: rgb(243, 224, 173);
  padding-left: 10px;
  color: rgb(136, 81, 51);
  text-shadow: 3px 3px 5px white;
  font-size: 22px;
  caret-color: #b30000;
}
.logIn .username::placeholder {
  text-shadow: 3px 3px 5px white;
  font-size: 20px;
}
.logIn .username:focus {
  outline: none;
  box-shadow: 1px 1px 30px rgb(248, 250, 161);
}
input.button {
  /* display: inline-block;
  vertical-align: top; */
  height: 60px;
  width: 175px;
  /* margin: 0 auto; */
  color: #61432f;
  font-size: 24px;
  font-weight: bold;
  background-image: linear-gradient(0deg, #cec688 0%, #fefae8 50%, #fefae8 85%, #fefefb 100%);
  border: 3px solid #c6bc9d;
  border-radius: 16px;
  box-shadow: 2px 4px 0 0 rgb(0 0 0 / 20%);
  padding: 0 10px;
  margin-top: 20px;
  margin-left: 100px;
}
span {
  color: white;
  font-size: 22px;
}
.err {
  position: absolute;
  margin-top: -50px;
  /* color already in html */
  font-size: 25px;
  text-shadow: 2px 2px 14px black;
}

input.button:hover {
  cursor: pointer;
  background-color: #ffffff;
  background-image: none;
  /* border: 3px solid #ffffff; */
}

select {
  background-color: #6fa058;
  width: 100px;
  height: 50px;
  text-align: center;
  color: white;
  font-size: 20px;
  border-radius: 15px;
  border: 5px solid #61432f;
}
option {
  background-color: #aac99b;
  border-radius: 10px;
}
/* ==================================================== */
div.users {
  display: inline-block;
  /* outline: 10px solid lightseagreen; */
  vertical-align: top;
  margin: 0px 5px 5px 5px;
  width: 140px;
  height: 510px;
  padding: 20px 10px;
  border: 5px solid rgb(170, 106, 63);
  background-image: url("../src/static/wood.jpg");
  background-repeat: repeat;
  background-size: 280px;
  color: white;
  border-radius: 10px;
  font-size: 23px;
  overflow: scroll;
  scroll-behavior: smooth;
  overflow-x: hidden; /* Hide horizontal scrollbar */
  overflow-y: auto; /* min-height: 300px;
  max-height: 300px; */
}
div.wrapper {
  vertical-align: top;
  display: inline-block;
  /* outline: 10px solid greenyellow; */
}
p.p_users {
  border: 2px solid rgb(242, 188, 79);
  border-radius: 10px;
  /* background-color: black; */
  /* background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12); */
  background-image: linear-gradient(to bottom, #6e2d06, #7a3508, #873e0b, #93470d, #a0500f);
  padding: 3px 1px;
}
/* LOGO */
/* .logo {
  background-image: url('../src/static/sm_logo.png');
  width: 50px;
  height: 30px;
} */
.main_logo {
  display: block;
  margin: 0 auto;
  margin-bottom: 20px;
}
/* rooms */
.room {
  background-color: red;
  width: fit-content;
  margin: 0 auto;
  margin-bottom: 20px;
  border: 5px solid saddlebrown;
  padding: 10px 20px;
  border-radius: 10px;
  background-image: url("./static/red_bg.svg");
  color: white;
  font-size: 22px;
}

/* ============ chatting ============== */
.chatContainer {
  width: 610px;
  height: 550px;
  /* border: 5px solid #0091ff; */
  /* border: 5px solid rgb(254, 243, 190); */
  border: 5px solid rgb(200, 221, 117);
  border-radius: 10px;
  /* background-color: rgb(169, 230, 230); */
  /* background-color: rgb(216, 222, 152); */
  background-color: rgb(137, 165, 91);
  /* style the container */
  /* display: flex; */
  /* stack on top of eachother */
  /* flex-direction: column; */
  overflow: scroll;
  scroll-behavior: smooth;
  overflow-x: hidden; /* Hide horizontal scrollbar */
  overflow-y: auto;
}

/* .wrapper-id {
  display: flex;
  background-color: red;
} */
/* message bubble */
.message_bubble {
  margin: 5px;
  /* position: relative; */
  width: 20em;
  /* width: 300px; */
  /* display: flex; */
  background-color: #fff;
  /* background-color: #0091ff; */
  padding: 0.1em 1em;
  font-size: 1em;
  border-radius: 0.75rem;
  box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3), 0 0.0625rem 0.125rem rgba(0, 0, 0, 0.2);
}

#You {
  justify-content: flex-end;
  margin-left: 240px;
  background-color: #f6fdd5;
}
#Other {
  justify-content: flex-start;
  background-color: #c6e9bf;
}

.msg-line * {
  /* outline: 1px solid red; */
}

.left,
.right {
  display: inline-block;
  vertical-align: top;
}
.left {
  width: 50px;
}
.right {
  width: 270px;
}

.left .emoji {
  font-size: 28px;
}

.name {
  font-weight: bold;
  /* display: inline-block;
  vertical-align: top; */
}
.actual_text_message {
  /* background-color: red; */
}

.time {
  /* background-color: blueviolet; */
  text-align: right;
  font-size: 11px;
}

/* ======== scrollbar ============= */
::-webkit-scrollbar {
  width: 10px;
  background-color: #d8a944;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px rgb(221, 143, 42);
  border-radius: 15px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  /* background: red;  */
  background: rgb(250, 220, 124);
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #b30000;
}

.form {
  /* background-color: rgb(50, 207, 155); */
  background-color: #dfc94f;
  background-image: url("../src/static/log.svg");
  background-repeat: repeat;
  background-size: 400px;
  width: 580px;
  padding: 20px;
  margin-top: 5px;
  border-radius: 10px;
  /* margin: 0 auto; */
  margin-left: 180px;
}
.form .da_input {
  width: 79%;
  height: 30px;
  /* background-color: #8cca6f; */
  background-color: #6fa058;
  border-radius: 5px;
  color: white;
  font-size: 18px;
  text-shadow: 2px 2px 4px black;
}
.da_input:focus {
  outline: none;
}
.send_button {
  background-color: cornflowerblue;
  margin-left: 20px;
  width: 90px;
  height: 36px;
  border-radius: 10px;
  color: white;
  font-size: 17px;
}
.send_button:hover {
  background-color: rgb(62, 123, 236);
  cursor: pointer;
}
.send_button:active {
  background-color: red;
  outline: none;
}

